	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)
	* More detailed error messages when messages fail to send.  (Aman Gupta)
	* The simultaneous login account option is respected when using
	  the clientLogin authentication method.
	* Fix offline message retrieval (broken in 2.6.3)
	* Fix SSL when clientLogin is enabled.
	* Fix sending and receiving Unicode characters in a Direct IM

	MSN:
	* Don't forget display names for buddies.
	* Fix a random crash that might occur when idle.
	* Fix more FQY 240 connection errors.
	* Fix a crash that could occur when adding a buddy.
	* Fix an occasional crash when sending message to an offline user.
	* Fix a random crash that might occur when idle.
	* Fix a crash when logging in with some long non-ASCII passwords.
	  (Shaun Lindsay)
	* Cache our own friendly name as the server no longer does that for
	  us.  Users of older versions may need to re-set their friendly name
	  as it has probably been reset.

	XMPP:
	* Users connecting to Google Talk now have an "Initiate Chat" context menu
	  option for their buddies.  (Eion Robb)
	* Fix a crash when attempting to validate an invalid JID.
	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Try to automatically find a STUN server by using an SRV lookup on the
	  account's domain, and use that for voice and video if found and the user
	  didn't set one manually in prefs.
	* Fix a crash when adding a buddy without an '@'.
	* Don't show the option to send a file to a buddy if we know for certain
	  they don't support any file transfer method supported by libpurple.
	* Keep the avatar on the server if one is not set locally.

	Yahoo:
	* Fix sending /buzz.
	* Fix blocking behavior for federated (MSN/OCS/Sametime) service users.
	  (Jason Cohen)
	* Add support for adding OCS and Sametime buddies.  OCS users are added